Fixing click on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -266,6 +266,7 @@ img {
     transform-style: preserve-3d;
     margin-bottom: 15px;
     font-size: 1.2rem;
+    cursor: pointer;
   }
 
   .card__face {
@@ -280,6 +281,7 @@ img {
     border-radius: 16px;
     padding: 20px;
     box-sizing: border-box;
+    cursor: pointer;
   }
 
   .card__face--front {
@@ -291,6 +293,7 @@ img {
   .card__face--front img {
     width: 100%;
     height: auto;
+    cursor: pointer;
   }
 
   .card__face--back {
@@ -302,6 +305,7 @@ img {
 
   .card.is-flipped {
     transform: rotateY(180deg);
+    cursor: pointer;
   }
 
   .cards__nav {
